--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.7.3",
     "iconsax-react": "^0.0.8",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.539.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
