--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yanikemmenegger/react-world-map": "^1.3.5",
     "axios": "^1.7.3",
+    "framer-motion": "^12.23.12",
     "iconsax-react": "^0.0.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
